--- a/slides/.gitignore
+++ b/slides/.gitignore
@@ -1,7 +1,5 @@
 /.texpadtmp/
-/bormetti_presentazione.pdf
-/bormetti_presentazione.dvi
-/bormetti_presentazione.ps
+/_minted-presentation/
 *.aux
 *.log
 *.nav
@@ -9,10 +7,8 @@
 *.snm
 *.synctex.gz
 *.toc
-/_minted-misuraca_presentazione/
 *.dvi
 *.ps
-/misuraca_presentazione.pdf
-/_minted-presentation/
-/presentation.pdf
 *.synctex(busy)
+/presentation.pdf
+/2_glossary.pdf
